--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,6 +20,8 @@
                         class="w-full border-none bg-transparent outline-none placeholder:italic focus:outline-none" required autofocus/>
             </div>
 
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
+
             <div class="w-full transform border-b-2 bg-transparent text-lg duration-300 focus-within:border-indigo-500">
                 <label for="inputPassword">Email</label>
                 <input type="password"
